--- a/app/compass/sass/main.scss
+++ b/app/compass/sass/main.scss
@@ -1,3 +1,376 @@
-h1 {
-    color: red;
+@import "compass/reset";
+
+/*
+* @Author: hanjiyun
+* @Date:   2014-02-22 11:44:36
+* @Last Modified by:   hanjiyun
+* @Last Modified time: 2014-02-24 15:35:37
+*/
+
+html, body {
+    font-family: 'Open Sans', Verdana, Geneva, sans-serif;
+    height: 100%;
+    color: #fff;
+}
+
+body{
+    background: #f5f5f5;
+}
+
+.ui.sidebar.left{
+    position: absolute;
+    left: -275px;
+    bottom: 54px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    margin-left:0!important;
+    -webkit-transition: left .3s ease;
+    transition: left .3s ease;
+}
+
+.ui.floating.sidebar{
+    box-shadow: none;
+}
+
+.ui.vertical.menu{
+    height: 100%;
+    position: relative;
+    border-radius:0;
+    box-shadow: none;
+    width: 275px;
+    /*background: #e5e4db;*/
+    /*background: #e9e9e9;*/
+    /*background: #fff;*/
+    background: none;
+}
+
+.ui.menu .item{
+    padding: 0 0.95em;
+}
+
+.ui.vertical.menu .item .menu dt.item{
+    padding: .8rem 0.5rem;
+    margin: 10px 10px 0 10px;
+    font-size: 18px;
+}
+
+.ui.vertical.menu .item > .menu > .item {
+    padding: .5rem 1rem;
+}
+
+.ui.vertical.menu .item > .menu > .item .item{
+    padding: 0.35rem 0.3rem 0.3rem 0.3rem;
+    font-size: 16px;
+}
+
+.ui.vertical.menu .item > .menu > .item .menu{
+    padding-top: 0.5rem;
+}
+
+.ui.menu .item .item, .ui.menu .item .item>a:not(.button){
+    color: #61905d
+}
+
+
+.ui.vertical.menu .item > .menu > .item .menu  .item > a {
+    margin-left: 1.2rem;
+}
+
+
+
+.ui.vertical.menu .item > .menu > .item .item .item:not(.header){
+    padding: .5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+/*.ui.vertical.menu .item > .menu > .item .item .item .item{
+    margin-left: 10px;
+}*/
+
+.ui.vertical.menu .item > .menu > .item .item h4.item{
+    background: none;
+    border-bottom :1px solid #eee;
+    font-weight: 700;
+    font-family: "Helvetica Neue", "Helvetica";
+}
+
+
+
+
+.ui.vertical.menu .item > .menu > .item > .menu > .item > .menu .item > a{
+    font-size: 14px;
+    color: #61905d;
+}
+
+/*.ui.vertical.menu .item > .menu > .item > .menu > .item > .menu .item > a:hover{
+    color: #61905d;
+    border-bottom: 1px dashed #61905d
+}*/
+
+.ui.menu .item .item:not(.active) > a:hover{
+    border-bottom: 1px dashed #61905d
+}
+
+.ui.vertical.menu .item > .menu{
+    margin: 0 -.95em 0;
+}
+
+.ui.vertical.menu .item .menu .active.item {
+    background-color: #2f7c2f;
+    color: #fff;
+}
+.ui.vertical.menu .item .menu .active.item a{
+    color: #fff;
+}
+.ui.vertical.menu .item > .menu > .item > .menu > .item > .menu .item.active a{
+    color: #fff;
+}
+
+.ui.vertical.pointing.menu .menu .active.item:after{
+    background-color: #2f7c2f;
+    box-shadow: none;
+    right: -0.3em;
+    -webkit-transition: background 1s ease;
+    transition: background 1s ease;
+}
+
+header {
+
+}
+
+.ui.menu nav.item {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    bottom: 54px;
+    padding-top: 54px;
+    z-index: 3;
+}
+
+header a {
+    text-decoration: none;
+}
+
+article{
+    position: relative;
+    color: #333;
+    height: 100%;
+    width: auto;
+    text-align: center;
+    -webkit-transition: margin-left .3s ease;
+    transition:  margin-left .3s ease;
+}
+
+
+article section{
+    position: relative;
+    display: none;
+    width: 600px;
+    height: 100%;
+    margin: 0 auto;
+    line-height: 1.6;
+    font-size: 14px;
+}
+
+article section.active{
+    display: table;
+}
+
+article section.active .course_wrap {
+    /*display: inline-block;*/
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+    font-family: "Helvetica Neue", "Helvetica";
+}
+
+/*article section.active:before{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}*/
+
+section h4{
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+#about{
+    font-size: 16px;
+}
+#Logo{
+/*    position: absolute;
+    width: 100%;*/
+    padding: 0;
+    /*background: #c00;*/
+    border-radius: 0;
+    box-shadow: -1px 1px 0px rgba(0,0,0,0.1);
+    background: rgba(255,255,255,0.95) url(../images/logo_new_latest.png) 70px center no-repeat;
+    background-size:35px;
+    /*z-index: 4;*/
+}
+#Logo span{
+    display: block;
+    padding: 0 .95em 0 110px;
+    font-family: "Helvetica Neue", "Helvetica";
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 54px;
+    color: #3baa24
+}
+
+.course_wrap{
+    padding-left: 100px;
+}
+#about .course_wrap{
+    padding-left: 20px;
+}
+.course_avatar{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -32px;
+}
+.course_avatar img{
+    width: 64px;
+    height: 64px;
+    border-radius:50%;
+    border: 4px solid #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+.course_time{
+    margin-bottom: 20px;
+}
+
+
+
+
+
+#switch_btn{
+    /*display: none;*/
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9999;
+    height: 54px;
+    overflow: hidden;
+    -webkit-transition: margin-left .3s ease;
+    transition:  margin-left .3s ease;
+}
+#switch_btn .button{
+    background: rgba(59, 170, 36, 0.8)
+}
+#switch_btn .button,
+#switch_btn .button:active,
+#switch_btn .button:focus{
+    box-shadow: none!important;
+    border: none!important;
+    border-radius: 0;
+    color: #fff;
+    font-size: 1.35rem;
+}
+
+#switch_btn .button:hover{
+    background: rgba(255,255,255,0.8);
+    background: #3baa24;
+    color: #fff;
+}
+
+
+#vote{
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    width: 100%;
+    height: 54px;
+    background: #fff;
+    text-align: center;
+    padding-top: 10px;
+    border-top: 1px solid #eee;
+}
+
+body.pushed{
+    overflow: hidden;
+}
+body.pushed .ui.sidebar{
+    left: 0;
+    bottom: 0px;
+    background: #fff;
+    height: auto!important;
+}
+
+body.pushed article{
+    width: 100%;
+}
+
+body.pushed #switch_btn{
+}
+
+body.pushed #switch_btn .button i:before{
+    content: "\f053";
+}
+
+@media only screen and (max-width: 320px) {
+    body.pushed{
+        overflow: auto;
+        height: auto;
+    }
+    #switch_btn{
+        position: fixed;
+        display: none;
+    }
+    body.pushed article{
+        margin-left: 0!important;
+    }
+    article section{
+        display: block;
+        padding: 60px 0 30px 0;
+        border-bottom: 1px solid #eee;
+        text-align: left;
+    }
+    aside{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    article section {
+        width: auto;
+        max-width: 600px;
+    }
+
+    .course_wrap {
+        padding: 20px;
+    }
+
+    .course_wrap {
+        padding-left: 20px;
+    }
+
+    .course_avatar {
+        position: static;
+        margin-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 1220px) {
+    /*body.pushed .ui.sidebar{
+        left: -275px;
+    }
+    body.pushed article{
+        margin-left: 0px;
+    }
+    body.pushed #switch_btn .button i:before{
+        content: "\f0c9";
+    }*/
+
+}
+
+
+
+/*Retina*/
+@media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+
+
 }
