--- a/app/compass/sass/main.scss
+++ b/app/compass/sass/main.scss
@@ -38,9 +38,6 @@ body{
     border-radius:0;
     box-shadow: none;
     width: 275px;
-    /*background: #e5e4db;*/
-    /*background: #e9e9e9;*/
-    /*background: #fff;*/
     background: none;
 }
 
@@ -135,10 +132,6 @@ body{
     transition: background 1s ease;
 }
 
-header {
-
-}
-
 .ui.menu nav.item {
     position: absolute;
     top: 0px;
@@ -162,6 +155,15 @@ article{
     transition:  margin-left .3s ease;
 }
 
+article a{
+    color: #61905d;
+    text-decoration: none;
+}
+article a:hover{
+    color: #61905d;
+    border-bottom: 1px dashed #61905d;
+}
+
 
 article section{
     position: relative;
@@ -178,41 +180,54 @@ article section.active{
 }
 
 article section.active .course_wrap {
-    /*display: inline-block;*/
     display: table-cell;
     vertical-align: middle;
     text-align: left;
     font-family: "Helvetica Neue", "Helvetica";
 }
 
-/*article section.active:before{
-    content: "";
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}*/
-
 section h4{
     font-size: 24px;
     margin-bottom: 20px;
 }
+
+section dl{
+    margin-top: 20px;
+}
+section strong{
+    font-weight: 700;
+}
+section dl dt{
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+section dl dd{
+    position: relative;
+    padding-left: 15px
+}
+section dl dd:before{
+    content: "";
+    position: absolute;
+    left: 0px;
+    top: 8px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #999;
+}
+
 #about{
     font-size: 16px;
 }
 #Logo{
-/*    position: absolute;
-    width: 100%;*/
-    padding: 0;
-    /*background: #c00;*/
     border-radius: 0;
     box-shadow: -1px 1px 0px rgba(0,0,0,0.1);
-    background: rgba(255,255,255,0.95) url(../images/logo_new_latest.png) 70px center no-repeat;
+    background: rgba(255,255,255,0.95) url(../images/logo_new_latest.png) 60px center no-repeat;
     background-size:35px;
-    /*z-index: 4;*/
 }
 #Logo span{
     display: block;
-    padding: 0 .95em 0 110px;
+    padding: 0 .95em 0 90px;
     font-family: "Helvetica Neue", "Helvetica";
     font-size: 30px;
     font-weight: 700;
@@ -248,7 +263,6 @@ section h4{
 
 
 #switch_btn{
-    /*display: none;*/
     position: absolute;
     left: 0;
     top: 0;
@@ -355,22 +369,12 @@ body.pushed #switch_btn .button i:before{
 }
 
 @media only screen and (max-width: 1220px) {
-    /*body.pushed .ui.sidebar{
-        left: -275px;
-    }
-    body.pushed article{
-        margin-left: 0px;
-    }
-    body.pushed #switch_btn .button i:before{
-        content: "\f0c9";
-    }*/
-
+    /*todo*/
 }
 
 
 
 /*Retina*/
 @media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
-
-
+    /*todo*/
 }
